# comicbrains

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  METHODS.md  README.md  make_test_sphere.py  pyproject.toml
.github/workflows/: pages.yml
examples/: basic_glass_brain.py  with_fmri_overlay.py
glass_brains/: __init__.py  arrays.py  bake.py  colormaps.py  core.py  export.py  figure.py  overlays.py  pipeline.py  render.py  server.py  spec.py  subcortical.py  surfaces.py
glass_brains/viewer/: index.html  package.json
glass_brains/viewer/app/: browser-main.js  headless-entry.js
glass_brains/viewer/controls/: bind.js  colorbar.js
glass_brains/viewer/core/: cameras.js  config-schema.js  framing.js  grid.js  presets.js  units.js
glass_brains/viewer/scene/: asset-loader.js  passes.js  renderer.js
glass_brains/web/: index.html  smoketest.html
glass_brains/web/app/: main.js
glass_brains/web/controls/: bind.js  cli-export.js  cmap-picker.js  colorbar.js  freecanvas.js  kapow.js
glass_brains/web/core/: colormap.js  config-schema.js  core.test.js  views.js  visibility.js
glass_brains/web/data/: aseg.json  colormaps.json  cortex_surface.json  nibabel-5.4.2-py3-none-any.whl  render-config.json  scene.json
glass_brains/web/data/demo/: meta.json
glass_brains/web/data/subcortical/: brainstem.glb  l_accumbens.glb  l_amygdala.glb  l_caudate.glb  l_cerebellum.glb  l_hippocampus.glb  l_pallidum.glb  l_putamen.glb  l_thalamus.glb  r_accumbens.glb  r_amygdala.glb  r_caudate.glb  r_cerebellum.glb  r_hippocampus.glb  r_pallidum.glb  r_putamen.glb  r_thalamus.glb
glass_brains/web/pyodide/: bootstrap.js  pipeline.py
glass_brains/web/scene/: asset-loader.js  materials.js  passes.js  renderer.js
tests/: integration_test.py  smoketest.py  test_animation.py  test_cli_per_overlay.py  test_config_roundtrip.py  test_custom_template.py  test_features_m10.py  test_figure_api.py  test_free_canvas.py  test_golden_renders.py  test_imports.py  test_pipeline_parity.py  test_pyodide_sync.py  test_region_report.py  test_render_session.py  test_smoothing.py  test_surface.py  test_vendor_sync.py  test_volume_only.py
